resolved css overlay with font

--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -7,23 +7,33 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <div class="col-xs-12 col-md-12 text-primary"><h2 class="fancy-font">The Brazilian Room</h2></div>
-      <div class="pull-right col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-12 text-primary">
+        <h2 class="fancy-font">The Brazilian Room</h2>
+      </div>
+    </div>
+    <div class="row pull-right col-xs-12 col-md-6">
+      <div>
         <%= image_tag "BrazilianRoom.jpg", class: "col-xs-12 col-md-10"%>
       </div>
-      <div class="pull-left col-xs-12 col-md-6">
-        <h3>Tilden Regional Park<br/>Berkeley, California</h3>
-        <p class="text-justify">One of the District's three oldest parks, Tilden has been called the jewel of the system,
-          and its recreational activities have become a happy tradition for generations of East Bay
-          youngsters. From a carousel ride and a picnic to a swim at Lake Anza and a stroll through
-          the Botanic Garden, Tilden has variety to delight everyone. Yet there are plenty of quiet
-          places in Tilden's 2,079 acres to shelter the wildlife and preserve natural beauty. Tilden
-          was named for Charles Lee Tilden, first president of the Park District Board of Directors.
-          The park is reached via Canon Drive, Shasta Road, or South Park Drive, all off Grizzly Peak
-          Boulevard in Berkeley.</p>
-        <p class="text-justify">You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
+    </div>
+      <div class="row">
+        <div class="pull-left col-xs-12 col-md-6">
+          <h3>Tilden Regional Park<br/>Berkeley, California</h3>
+          <p class="text-justify">One of the District's three oldest parks, Tilden has been called the jewel of the system,
+            and its recreational activities have become a happy tradition for generations of East Bay
+            youngsters. From a carousel ride and a picnic to a swim at Lake Anza and a stroll through
+            the Botanic Garden, Tilden has variety to delight everyone. Yet there are plenty of quiet
+            places in Tilden's 2,079 acres to shelter the wildlife and preserve natural beauty. Tilden
+            was named for Charles Lee Tilden, first president of the Park District Board of Directors.
+            The park is reached via Canon Drive, Shasta Road, or South Park Drive, all off Grizzly Peak
+            Boulevard in Berkeley.</p>
+          <p class="text-justify">You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
+        </div>
       </div>
-      <div class="col-xs-12 col-md-12">
+
+
+     <div>
+       <div class="col-xs-12 col-md-12">
         <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
         <div class="col-xs-12 col-md-12">
           <div class="text-left col-xs-12 col-md-6">
