--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/navbar' %>
     <div class="row">
       <div class="col-xs-12 col-md-12 text-primary">
-        <h2 class="fancy-font">The Brazilian Room</h2>
+        <h2 class="fancy-font-title">The Brazilian Room</h2>
       </div>
     </div>
     <div class="row pull-right col-xs-12 col-md-6">
