modified wording and added 'construction' notification to incomplete pages

--- a/app/views/pages/accommodations.html.erb
+++ b/app/views/pages/accommodations.html.erb
@@ -2,5 +2,13 @@
   <div class="well">
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
+     <div class="row">
+      <div class="col-xs-12 col-md-12 text-primary">
+        <h2 class="fancy-font-title">The ??? Hotel</h2>
+      </div>
+      <div>
+        <p>We are in the process of negotiating and looking at different hotels in the Berkeley area. Please stand by as we try to get the best rate and location for you!</p>
+      </div>
+    </div>
   </div>
 </div>
