--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -10,6 +10,9 @@
       <div class="col-xs-12 col-md-12 text-primary">
         <h2 class="fancy-font-title">The Brazilian Room</h2>
       </div>
+      <div>
+        <p>The Brazilian Room will hold both the Ceremony and the Reception following</p>
+      </div>
     </div>
     <div class="row pull-right col-xs-12 col-md-6">
       <div>
@@ -19,14 +22,9 @@
       <div class="row">
         <div class="pull-left col-xs-12 col-md-6">
           <h3>Tilden Regional Park<br/>Berkeley, California</h3>
-          <p class="text-justify">One of the District's three oldest parks, Tilden has been called the jewel of the system,
-            and its recreational activities have become a happy tradition for generations of East Bay
-            youngsters. From a carousel ride and a picnic to a swim at Lake Anza and a stroll through
-            the Botanic Garden, Tilden has variety to delight everyone. Yet there are plenty of quiet
-            places in Tilden's 2,079 acres to shelter the wildlife and preserve natural beauty. Tilden
-            was named for Charles Lee Tilden, first president of the Park District Board of Directors.
-            The park is reached via Canon Drive, Shasta Road, or South Park Drive, all off Grizzly Peak
-            Boulevard in Berkeley.</p>
+          <p class="text-justify">One of the District's oldest parks, Tilden has been called the jewel of
+            the system, and its recreational activities have become a happy tradition for generations of East Bay residents. From a carousel ride and a picnic to a swim at Lake Anza, or a round of golf and a stroll through the Botanic Garden, Tilden has variety to delight everyone. Tilden's 2,079 acres provide shelter to a variety of wildlife and natural beauty.
+          </p>
           <p class="text-justify">You can read more about the park <a href="http://www.ebparks.org/parks/tilden">at their website, here</a></p>
         </div>
       </div>
