--- a/app/views/pages/wedding.html.erb
+++ b/app/views/pages/wedding.html.erb
@@ -4,6 +4,9 @@
     <%= render 'layouts/navbar' %>
     <div class="row">
       <p>“Life is a long journey<br/>Just hold my hand<br/>and walk together<br/>and be there with me<br/>always."</p>
+      <div>
+        <p><strong>Schedule TBD.</strong></p>
+      </div>
       <div class="pull-left col-xs-12 col-md-6">
       </div>
       <div class="pull-right col-xs-12 col-md-6">
