--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -57,6 +57,15 @@ body {
   font-family: 'AlexBrush';
   src: font-url('AlexBrush-Regular.ttf');
 }
+@font-face {
+  font-family: 'Allura';
+  src: font-url('Allura-Regular.ttf');
+}
+.fancy-font {
+  font-family: 'Allura';
+  font-size: 62px;
+  pointer-events: none;
+}
 
 .fancy-font-title {
   font-family: 'AlexBrush';
