added registries with proper links, formalized pageholder text

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -58,11 +58,11 @@ body {
   src: font-url('AlexBrush-Regular.ttf');
 }
 @font-face {
-  font-family: 'Allura';
+  font-family: 'Allura-Regular';
   src: font-url('Allura-Regular.ttf');
 }
 .fancy-font {
-  font-family: 'Allura';
+  font-family: 'Allura-Regular';
   font-size: 62px;
   pointer-events: none;
 }
