--- a/app/views/pages/wedding.html.erb
+++ b/app/views/pages/wedding.html.erb
@@ -5,7 +5,8 @@
     <div class="row">
       <p>“Life is a long journey<br/>Just hold my hand<br/>and walk together<br/>and be there with me<br/>always."</p>
       <div>
-        <p><strong>Schedule TBD.</strong></p>
+        <p><strong>Please check back later for further details as we get closer to the date!</strong></p>
+        <iframe src="http://free.timeanddate.com/countdown/i4x3fmxd/n791/cf12/cm1/cu1/ct0/cs0/ca0/cr0/ss0/cac000/cpc000/pct/tcfff/fs100/szw320/szh135/tatMarriage%20in.../tac000/tptNos%20casamos%20en.../tpc000/matNos%20casamos%20en.../mac000/mpc000/iso2016-03-27T00:00:00/pd2" allowTransparency="true" frameborder="0" width="161" height="69"></iframe>
       </div>
       <div class="pull-left col-xs-12 col-md-6">
       </div>
