--- a/app/views/pages/accommodations.html.erb
+++ b/app/views/pages/accommodations.html.erb
@@ -4,10 +4,10 @@
     <%= render 'layouts/navbar' %>
      <div class="row">
       <div class="col-xs-12 col-md-12 text-primary">
-        <h2 class="fancy-font-title">The ??? Hotel</h2>
+        <h2 class="fancy-font-title"></h2>
       </div>
       <div>
-        <p>We are in the process of negotiating and looking at different hotels in the Berkeley area. Please stand by as we try to get the best rate and location for you!</p>
+        <p>Please check back later as we are in the process of choosing a hotel in the Berkeley area.</p>
       </div>
     </div>
   </div>
