--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -2,7 +2,7 @@
 <!--<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>-->
 <!--<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>-->
 
-<!--<div class="container">-->
+<div class="container">
   <div class="page-header text-center well">
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
@@ -88,7 +88,7 @@
       </div> -->
     </div>
   </div>
-<!--</div>-->
+</div>
 
 <!--
  <%# @places.each do |place| %>
