--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -31,45 +31,59 @@
 
 
      <div>
-       <div class="col-xs-12 col-md-12">
-        <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
-        <div class="col-xs-12 col-md-12">
-          <div class="text-left col-xs-12 col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d201869.9004248678!2d-122.47978766431298!3d37.761505181062326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA!3m2!1d37.6213129!2d-122.3789554!4m3!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1445719333376"
-                    frameborder="0" height="300" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
-          </div>
-          <div class="text-left col-xs-12 col-md-6">
-            <h5>From San Francisco Airport</h5>
-            <br/><p class="text-left">From Highway 80 Eastbound<br/>
-              Exit at <strong>University Avenue</strong> in Berkeley.<br/>
-              Follow University up (east) to Oxford.<br/>
-              <strong>Left</strong> on Oxford to Rose.<br/>
-              <strong>Right</strong> on Rose to Spruce.<br/>
-              <strong>Left</strong> on Spruce on the top of the hill, cross the intersection, and Spruce becomes Wildcat Canyon Road.
-              <br/>Continue for two miles and the <strong>Brazilian Room</strong> will be on your left.</p>
-          </div>
+      <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
+      <div class="row top-buffer">
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d403925.06803679606!2d-122.282078!3d37.72755!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA+94128!3m2!1d37.6213129!2d-122.3789554!4m5!1s0x80857c0da1064a0b%3A0xf3b6a1c7c5bc2cbe!2sAnza+View+Rd%2C+Berkeley%2C+CA+94708!3m2!1d37.8937988!2d-122.2459593!5e0!3m2!1sen!2sus!4v1447317068764" frameborder="0" height="300" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
         </div>
-
-        <div class="col-xs-12 col-md-12">
-          <div class="text-left col-xs-12 col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d100876.40017317691!2d-122.29811845039997!3d37.80439150223062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808f845402c0a641%3A0xb0630c0f03017460!2sOakland+International+Airport%2C+Airport+Drive%2C+Oakland%2C+CA!3m2!1d37.7125689!2d-122.21974279999999!4m5!1s0x80857c0da1064a0b%3A0xf3b6a1c7c5bc2cbe!2sAnza+View+Rd%2C+Berkeley%2C+CA+94708!3m2!1d37.8937988!2d-122.2459593!5e0!3m2!1sen!2sus!4v1445746475610"
-                    height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
-          </div>
-          <div class="text-left col-xs-12 col-md-6">
-            <h5>From Oakland Airport</h5>
-          </div>
+        <div class="text-left col-xs-12 col-md-6">
+          <h5>From San Francisco Airport</h5>
+          <br/><p class="text-left">From Highway 80 Eastbound<br/>
+            Exit at <strong>University Avenue</strong> in Berkeley.<br/>
+            Follow University up (east) to Oxford.<br/>
+            <strong>Left</strong> on Oxford to Rose.<br/>
+            <strong>Right</strong> on Rose to Spruce.<br/>
+            <strong>Left</strong> on Spruce on the top of the hill, cross the intersection, and Spruce becomes Wildcat Canyon Road.
+            <br/>Continue for two miles and the <strong>Brazilian Room</strong> will be on your left.</p>
         </div>
+      </div>
 
-        <div class="text-left col-xs-12 col-md-12">
+      <div class="row top-buffer">
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d100876.40017317691!2d-122.29811845039997!3d37.80439150223062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808f845402c0a641%3A0xb0630c0f03017460!2sOakland+International+Airport%2C+Airport+Drive%2C+Oakland%2C+CA!3m2!1d37.7125689!2d-122.21974279999999!4m5!1s0x80857c0da1064a0b%3A0xf3b6a1c7c5bc2cbe!2sAnza+View+Rd%2C+Berkeley%2C+CA+94708!3m2!1d37.8937988!2d-122.2459593!5e0!3m2!1sen!2sus!4v1445746475610"
+                  height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+        </div>
+        <div class="text-left col-xs-12 col-md-6">
+          <h5>From Oakland Airport</h5>
+        </div>
+      </div>
+
+      <div class="row top-buffer">
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d100837.22632897201!2d-122.40244719964892!3d37.83306219424379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA!3m2!1d37.7749295!2d-122.4194155!4m5!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room%2C+Berkeley%2C+CA!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1447318515957"
+                  height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+        </div>
+        <div class="text-left col-xs-12 col-md-6">
           <h5>From San Francisco</h5>
         </div>
-        <div class="text-left col-xs-12 col-md-12">
+      </div>
+
+      <div class="row top-buffer">
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d404547.5251761318!2d-122.33905969280687!3d37.61327697666761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!3m2!1d37.3382082!2d-121.8863286!4m5!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room%2C+Berkeley%2C+CA!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1447318446782"
+                  height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+        </div>
+        <div class="text-left col-xs-12 col-md-6">
           <h5>From South Bay</h5>
         </div>
-        <div class="text-left col-xs-12 col-md-12">
-          <h5>de Barcelona</h5>
+      </div>
+
+      <div class="row top-buffer">
+        <div class="text-left col-xs-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d100756.79166861536!2d-122.22777324810657!3d37.89187317525664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808ff474197ba5f3%3A0xe06e49972003c36c!2sWalnut+Creek%2C+CA!3m2!1d37.910078299999995!2d-122.0651819!4m5!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room%2C+Berkeley%2C+CA!3m2!1d37.8936772!2d-122.24539879999999!5e0!3m2!1sen!2sus!4v1447318480817"
+                  height="300" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
         </div>
-        <div class="text-left col-xs-12 col-md-12">
+        <div class="text-left col-xs-12 col-md-6">
           <h5>From Walnut Creek and East</h5>
           <p>From Highway 24:
             At east end of Caldecott Tunnel, exit Fish Ranch Road up to Grizzly Peak Boulevard.
@@ -80,12 +94,14 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257"
-            height="450" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-10"></iframe>
-      <!-- <div class="row container">
-        <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'></div>
-      </div> -->
+    <div>
+      <div class="row top-buffer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257"
+              height="450" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
+        <!-- <div class="row container">
+          <div id="map" class="pull-right col-xs-4" style='width: 600px; height: 300px;'></div>
+        </div> -->
+      </div>
     </div>
   </div>
 </div>
