--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -5,7 +5,8 @@
     <div class="row">
       <div>
         <p>What we want most for our wedding is to share the day with our family and friends together. More than anything, we consider your presence the greatest gift.<br/>
-        That said, if you really would like to offer us something, please explore the page below. We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
+        That said, if you really would like to offer us something, please explore the page below.</p>
+        <p>We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
         </p>
       </div>
       <div class="col-xs-12 col-md-4 registry-gift">
@@ -24,8 +25,9 @@
         </a>
       </div>
       <div class="col-xs-12 col-md-12 registry-gift">
-        <div>
-          <p>Aside from the "standard" registries above, which will help build our home life together, we have compiled a list of experiences and items which we would truly enjoy in the bottom section of this page.
+        <div class="hidden-xs col-md-2"></div>
+        <div class="col-xs-12 col-md-8">
+          <p class="text-justify">Aside from the "standard" registries above, which will help build our home life together, we have compiled a list of experiences and items which we would truly enjoy in the bottom section of this page.
           Please feel free to click the links below to see the details for each item. If you choose to purchase an item, please return to this site to mark the item as 'purchased' so other guests are aware.
           If you encounter any troubles, don't hesitate to reach out to us at <a href="mailto:amalia.and.gary@gmail.com?Subject=Wedding%20Registry" target="_top">amalia.and.gary@gmail.com</a>.
           </p>
