--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
     <h1 class="fancy-font-title visible-xs-block visible-sm-block">Welcome!</h1>
       <div class="pull-left col-xs-0 col-md-4">
-      <%= image_tag "Amalia&Gary_031crop.png", class: "img img-responsive center-block", :style => "max-width: 60%; height: auto;" %>
+      <%= image_tag "Amalia&Gary_031crop1.jpeg", class: "img img-responsive center-block", :style => "max-width: 60%; height: auto;" %>
       </div>
       <div class="pull-left col-xs-12 col-md-6">
         <h1 class="fancy-font-title hidden-xs hidden-sm">Welcome!</h1>
