--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <div class="hidden-xs col-md-4">
       </div>
       <div class="col-xs-12 col-md-4">
-        <%= link_to image_tag("Amalia&Gary_037_c.jpeg", class: "img-circle img-responsive center-block"), navigation_path %>
+        <%= link_to image_tag("Amalia&Gary_037_c.jpg", class: "img-circle img-responsive center-block"), navigation_path %>
         <!--
         <%= link_to 'Log In', new_user_session_path, class: "btn navbar-btn btn-default" %>
         <%= link_to 'Sign Up', new_user_registration_path, class: "btn navbar-btn btn-default" %>
