--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap';
 
 body {
-  background-image:url(image_path('Amalia&Gary_034_lowQuality2.jpeg'));
+  background-image:url(image_path('Amalia&Gary_034_lowQuality2.jpg'));
   background-size: 150%;
   background-position: center;
   background-attachment: fixed;
