--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="pull-left col-xs-12 col-md-6">
         <h1 class="fancy-font-title hidden-xs hidden-sm">Welcome!</h1>
-        <p class="text-justify">We look forward to sharing this special moment in our lives with you.<br/>Please reference this site for any travel information, day of details, and more.</p>
+        <p class="text-justify top-buffer">We look forward to sharing this special moment in our lives with you.<br/>Please reference this site for any travel information, day of details, and more.</p>
         <p class="text-justify"><strong>For those of you who travel from lands afar</strong>, please know we are very honored that you are making the journey to join us. Whether it's out of town, across the country, or around the world - it means a lot to us.</p>
         <p class="text-justify">To help you with your stay in the Bay Area, we're compiling information which will help you get the most out of your stay. Start by checking out the <%= link_to "Accommodations Page, here", accommodations_path(@parent) %> for places to stay and our travel recommendations.</p>
       </div>
