--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <div class="well">
-      <footer>Built with Love for our <cite title="Source Title">Wedding Day</cite></footer>
+      <footer class="fancy-font-sm">Built with Love for our <cite title="Source Title">Wedding Day</cite></footer>
   </div>
 
 </div>
