--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,18 +3,71 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <p>“I love you without knowing how, or when, or from where. I love you simply, without problems or pride: I love you in this way because I do not know any other way of loving but this, in which there is no I or you, so intimate that your hand upon my chest is my hand, so intimate that when I fall asleep your eyes close.”<br/>― Pablo Neruda</p>
-      <div class="pull-left col-xs-12 col-md-6">
-
+      <p class="fancy-font-sm-1 top-buffer hidden-xs" style="line-height:1">
+        “I love you without knowing how, or when, or from where.<br/>
+        I love you simply, without problems or pride: <br/>
+        I love you in this way because I do not know any other way of loving but this<br/>
+        in which there is no I or you, so intimate that your hand upon my chest is my hand, <br/>
+        so intimate that when I fall asleep your eyes close.”
+      </p>
+      <p class="fancy-font-sm-1 pull-right hidden-xs" style="line-height:1; padding-right:15%;">― Pablo Neruda
+      </p>
+      <div class="col-xs-12 col-md-12">
+        <h1 class="fancy-font-lg">La historia de Amàlia y Gary</h1>
       </div>
+
+      <div class="pull-left col-xs-12 col-md-6 top-buffer">
+        <%= image_tag "proposal2.jpg", class: "top-buffer img img-responsive center-block", :style => "max-width: 90%; height: auto;" %>
+      </div>
+
       <div class="pull-right col-xs-12 col-md-6">
-        <h1>La historia de Amàlia y Gary</h1>
-        <p>Our Love story starts with a chance meeting, unexpected and spontaneous. </p>
-        <p>Amàlia moved to the United States in April 2013, to Oakland. Renting a car to start, she bought her first car on June 1st 2013 and promptly returned her rental the next day to the airport. After returning the car, she ventured to the train platform to head home when a stranger walked up to her and pointed out that: 'You don't have luggage!'. Following the european tradition of rarely talking to strangers in public transports, she first ignored the spontaneous salutation...</p>
-        <p>Gary, living in San Francisco, went to Denver, Colorado, that same weekend, to see two amazing people tying the knot and celebrate their big day. Flying home Sunday afternoon, he was in a great mood! Walking from the airplane to the SFO Bart station, suddenly he sees this gorgeous lady standing in front of him at the bottom of the escalator. Let's say hi!</p>
-        <p>...</p>
-        <p>She didn't answer!<br/>Should I walk away, or ... eh, let's say hello once more...</p>
-        <p> Amalia then took the hint and answered. They started chatting about what is she doing there, what is he doing there, Yosemite and camping... 1h went by and Gary almost missed his stop. Before jumping out of the train he asked her number. And got it.</p>
+        <p class="fancy-font-sm-1 top-buffer" style="line-height:0.6">
+          Our Love story starts with a chance meeting,<br/> unexpected and spontaneous
+        </p>
+        <p class="text-justify">
+        </p>
+        <p class="text-justify">
+          Amàlia, following one of her longing dreams, moved to the United States in April 2013 and settled down in Oakland, CA. On June 1st, she returned her rental car to the airport. Then, she ventured to the train platform to head home when a stranger walked up to her and point out that: 'You don't have luggage!'
+        </p>
+        <p class="text-justify">
+          Following the European tradition of rarely talking to strangers in public transports, she first ignored the spontaneous salutation...
+        </p>
+        <p class="text-justify">
+          Gary, who was living in San Francisco, flew to Denver, CO that same weekend to see two amazing people tying the knot and celebrate their big day. Flying home Sunday afternoon, he was in a great mood! Walking from the airplane to the train station, he suddenly saw a gorgeous lady standing in front of him at the bottom of the escalator. Let's say hi!
+        </p>
+        <p>
+          ...
+        </p>
+        <p>
+          She didn't answer!
+        </p>
+        <p class="text-justify">
+          He hesitated and was about to walk away, but in the end he decided to say hello once more.
+        </p>
+        <p class="text-justify">
+          Amàlia then took the hint and answered. They started chatting about what was she doing there, what was he doing there, Yosemite, traveling and camping... An hour went by and Gary almost missed his stop. Before jumping out of the train he asked for her number. And got it! They kept in touch and texted each other and met again two months later.
+        </p>
+        <p>
+        After that first date, quickly came a second. Then a third...
+        </p>
+        <p class="text-justify">
+          It was apparent they enjoyed each other’s company. A year later, they decided to move in together and Gary left SF and ventured to live in Oakland. Many things are said about Oakland, but so far, the toughest part was to fit all of Gary’s camping gear in the 1 bedroom apartment! They have made this place a home and enjoy the life and community they are building here.
+        </p>
+        <h4 class="fancy-font-sm-1">
+          On the 4th of July, Gary proposed to Amalia
+        </h4>
+        <p class="text-justify">
+          Many people know Gary’s passion for taking pictures of the stars by night. The setting of the proposal was idyllic: a relaxing night in a secluded area in the Sierra Nevada foothills, beneath a sky full of stars and the Milky Way, waiting for a lazy moon to rise. Amalia began to complain and wanted to go to sleep but Gary was persuading her to stay awake until the moon would rise to take one last shot… Eventually the moon rose (after waiting for more than two hours!) and when Amalia sleepily mentioned they could now go to the tent… Gary kneeled and surprised her with a magnificent ring shining under the moonlight.
+        </p>
+        <p class="text-justify">
+          Needless to say, Amalia suddenly woke up from such surprise and they spent an extra hour enjoying the news and taking a lot of pictures!
+        </p>
+        <p class="text-justify">
+          Today, we are still amazed and extremely grateful for having found each other and we are very excited to initiate this adventure called marriage accompanied by the people we cherish and love.
+        </p>
+        <p class="fancy-font-sm-1 top-buffer pull-right" style="line-height:1; padding-right:5%;">
+          Welcome to our beginning!
+      </p>
       </div>
     </div>
 
