--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -11,10 +11,12 @@
         <h2 class="fancy-font-title">The Brazilian Room</h2>
       </div>
       <div>
-        <p>The Brazilian Room will hold both the Ceremony and the Reception following</p>
+        <h3>
+          <strong>The Brazilian Room will hold both the Ceremony and the Reception following</strong>
+        </h3>
       </div>
     </div>
-    <div class="row pull-right col-xs-12 col-md-6">
+    <div class="row pull-right col-xs-12 col-md-6 top-buffer">
       <div>
         <%= image_tag "BrazilianRoom.jpg", class: "col-xs-12 col-md-10"%>
       </div>
@@ -32,7 +34,7 @@
 
      <div>
       <h3 class="col-xs-12 col-md-12">Driving Directions</h3>
-      <div class="row top-buffer">
+      <!-- <div class="row top-buffer">
         <div class="text-left col-xs-12 col-md-6">
           <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d403925.06803679606!2d-122.282078!3d37.72755!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x808f778c55555555%3A0xa4f25c571acded3f!2sSan+Francisco+International+Airport%2C+San+Francisco%2C+CA+94128!3m2!1d37.6213129!2d-122.3789554!4m5!1s0x80857c0da1064a0b%3A0xf3b6a1c7c5bc2cbe!2sAnza+View+Rd%2C+Berkeley%2C+CA+94708!3m2!1d37.8937988!2d-122.2459593!5e0!3m2!1sen!2sus!4v1447317068764" frameborder="0" height="300" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
         </div>
@@ -94,7 +96,7 @@
         </div>
       </div>
     </div>
-    <div>
+ -->    <div>
       <div class="row top-buffer">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.5724029231947!2d-122.24758748471275!3d37.893681413082504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857be6aaaaaaab%3A0xe8de096c7d88ad61!2sBrazilian+Room!5e0!3m2!1sen!2sus!4v1445583829257"
               height="450" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-12"></iframe>
