--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -3,10 +3,11 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <div>
-        <p>What we want most for our wedding is to share the day with our family and friends together. More than anything, we consider your presence the greatest gift.<br/>
-        That said, if you really would like to offer us something, please explore the page below.</p>
-        <p>We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
+      <div class="hidden-xs col-md-2"></div>
+      <div class="top-buffer col-xs-12 col-md-8">
+        <p class="text-justify">What we want most for our wedding is to share the day with our family and friends together. More than anything, we consider your presence the greatest gift.<br/>
+        If you really would like to offer us something, please explore the page below.</p>
+        <p class="text-justify">We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
         </p>
       </div>
       <div class="col-xs-12 col-md-4 registry-gift">
