--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,16 +1,10 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-family: TravelingTypewriter, helvetica neue, arial, helvetica, sans-serif;
+  font-size: 18px;
   line-height: 18px;
 }
-
-//p, ol, ul, td {
-//  font-family: verdana, arial, helvetica, sans-serif;
-//  font-size: 13px;
-//  line-height: 18px;
-//}
 
 pre {
   background-color: #eee;
