--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
-  <p class="hidden-xs fancy-font" style="font-size: 28px; font-family: 'Allura-Regular';">27 March 2016</p>
-  <h1 class="fancy-font"><strong>Amàlia and Gary</strong></h1>
+  <p class="hidden-xs fancy-font-sm">27 March 2016</p>
+  <h1 class="fancy-font-lg" style="line-height: 0.5"><strong>Amàlia and Gary</strong></h1>
 </div>
