--- a/app/views/pages/accommodations.html.erb
+++ b/app/views/pages/accommodations.html.erb
@@ -7,7 +7,8 @@
         <h2 class="fancy-font-title"></h2>
       </div>
       <div>
-        <p>Please check back later as we are in the process of choosing a hotel in the Berkeley area.</p>
+        <p>We are in the process of choosing a hotel in the Berkeley area.</p>
+        <p>Please check back for updates</p>
       </div>
     </div>
   </div>
