--- a/app/views/pages/wedding.html.erb
+++ b/app/views/pages/wedding.html.erb
@@ -3,9 +3,25 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/navbar' %>
     <div class="row">
-      <p>“Life is a long journey<br/>Just hold my hand<br/>and walk together<br/>and be there with me<br/>always."</p>
       <div>
-        <p><strong>Please check back later for further details as we get closer to the date!</strong></p>
+        <p class="fancy-font-sm-1 top-buffer text-right" style="line-height:0.8; padding-right:60%">
+          “Life is a long journey
+        </p>
+        <p class="fancy-font-sm-1 text-right" style="line-height:0.8; padding-right:50%">
+          Just hold my hand
+        </p>
+        <p class="fancy-font-sm-1 text-right" style="line-height:0.8; padding-right:40%">
+          and walk together
+        </p>
+        <p class="fancy-font-sm-1 text-right" style="line-height:0.8; padding-right:30%">
+          and be there with me
+        </p>
+        <p class="fancy-font-sm-1 text-right" style="line-height:0.8; padding-right:25%">
+          always."
+        </p>
+      </div>
+      <div>
+        <p><strong>Please check back for details as we get closer to the date!</strong></p>
         <iframe src="http://free.timeanddate.com/countdown/i4x3fmxd/n791/cf12/cm1/cu1/ct0/cs0/ca0/cr0/ss0/cac000/cpc000/pct/tcfff/fs100/szw320/szh135/tatMarriage%20in.../tac000/tptNos%20casamos%20en.../tpc000/matNos%20casamos%20en.../mac000/mpc000/iso2016-03-27T00:00:00/pd2" allowTransparency="true" frameborder="0" width="161" height="69"></iframe>
       </div>
       <div class="pull-left col-xs-12 col-md-6">
