--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -5,9 +5,22 @@
     <div class="row">
       <div class="hidden-xs col-md-2"></div>
       <div class="top-buffer col-xs-12 col-md-8">
-        <p class="text-justify">What we want most for our wedding is to share the day with our family and friends together. More than anything, we consider your presence the greatest gift.<br/>
-        If you really would like to offer us something, please explore the page below.</p>
-        <p class="text-justify">We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
+        <p class="text-justify">
+          What we want most for our wedding is to share the day with our family and friends together. More than anything, we consider your presence the greatest gift.<br/>
+          If you really would like to offer us something, please explore the page below.
+        </p>
+        <p class="text-justify">
+          If you will be shipping any gifts, please send them to Gary's Work at the following address:
+        </p>
+        <p>
+          Gary Marx<br/>
+          Suite 405<br/>
+          c/o Gusto, Inc.<br/>
+          500 3rd Street<br/>
+          San Francisco, CA 94107
+        </p>
+        <p class="text-justify">
+          We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
         </p>
       </div>
       <div class="col-xs-12 col-md-4 registry-gift">
