--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <!-- for bootstrap Mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="//cdn.optimizely.com/js/192244070.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
