--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,16 @@
   <!-- for bootstrap Mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="//cdn.optimizely.com/js/192244070.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-36238201-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
   <%= csrf_meta_tags %>
 </head>
 <body>
