--- a/app/views/pages/accommodations.html.erb
+++ b/app/views/pages/accommodations.html.erb
@@ -7,9 +7,45 @@
         <h2 class="fancy-font-title"></h2>
       </div>
       <div>
-        <p>We are in the process of choosing a hotel in the Berkeley area.</p>
-        <p>Please check back for updates</p>
+        <h1 class="col-xs-12 col-md-12">Wonderful news!</h1>
+        <p>We've secured a block of rooms at the <strong>Hilton Garden Inn, San Francisco/Oakland Bay Bridge</strong></p>
+        <p>
+        <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+         1800 Powell St,<br/> Emeryville, CA 94608<br/></p>
+        <div class="row top-buffer">
+          <div class="hidden-xs col-md-2">
+          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d22800.096264811466!2d-122.30093198839799!3d37.828798354565606!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x16792b08a5321cca!2sHilton+Garden+Inn+San+Francisco%2FOakland+Bay+Bridge!5e0!3m2!1sen!2sus!4v1449361492638" height="450" frameborder="0" style="border:0" allowfullscreen class="col-xs-12 col-md-8"></iframe>
+        </div>
+        <div class="col-xs-12 col-md-12">
+          <div class="hidden-xs col-md-2">
+          </div>
+          <p class="col-xs-12 col-md-8 top-buffer">note: the hotel is between Berkeley and Oakland on the east side of the bay in the small town of Emeryville. It is not inside the city of San Francisco. The Hotel is accessible by car, lyft/uber (a.k.a. 'Taxis'), or BART. If you take BART, you will need to grab a taxi for the last few miles.</p>
+        </div>
+        <div class="col-xs-12 col-md-12">
+          <h2 class="col-xs-12 col-md-12">Rooms and Rates</h2>
+          <div class="hidden-xs col-md-2">
+          </div>
+          <div class="col-xs-12 col-md-8">
+            <p class="col-xs-12 col-md-12">$129 per night (Single or Double)<br/>
+              <br/>
+              GROUP NAME:  <strong>Marx-Fernandez Wedding</strong><br/>
+              <br/>
+              To book, please call the Hotel Direct at (510) 658-9300<br/></p>
+            <h3 class="col-xs-12 col-md-12">Please Note: <strong>IMPORTANT INFORMATION</strong></h3><br/>
+            <br/>
+            <p class="col-xs-12 col-md-12">
+              Individual Reservations must be received by the Hotel no later than:<br/><br/>
+              <strong>Tuesday - February 23, 2016</strong><br/><br/>
+              Guestrooms and the guestroom rate will be based on availability for any individuals calling to make reservations under the group block after the cutoff date.
+              <br/>
+              <br/>In the event that a guest who has reserved a room checks out prior to the guest’s reserved checkout date, an early departure fee of $50 will be charged to that guest’s account. Guests wishing to avoid this fee must advise the hotel at or before check-in.<br/>
+              <br/>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<!-- highlight important info & date -->
