capitalized 'n' in 'note'

--- a/app/views/pages/accommodations.html.erb
+++ b/app/views/pages/accommodations.html.erb
@@ -20,7 +20,9 @@
         <div class="col-xs-12 col-md-12">
           <div class="hidden-xs col-md-2">
           </div>
-          <p class="col-xs-12 col-md-8 top-buffer">note: the hotel is between Berkeley and Oakland on the east side of the bay in the small town of Emeryville. It is not inside the city of San Francisco. The Hotel is accessible by car, lyft/uber (a.k.a. 'Taxis'), or BART. If you take BART, you will need to grab a taxi for the last few miles.</p>
+          <p class="col-xs-12 col-md-8 top-buffer">
+            Note: the hotel is between Berkeley and Oakland on the east side of the bay in the small town of Emeryville. It is not inside the city of San Francisco. The Hotel is accessible by car, lyft/uber (a.k.a. 'Taxis'), or BART. If you take BART, you will need to grab a taxi for the last few miles.
+          </p>
         </div>
         <div class="col-xs-12 col-md-12">
           <h2 class="col-xs-12 col-md-12">Rooms and Rates</h2>
