--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -10,14 +10,7 @@
           If you really would like to offer us something, please explore the page below.
         </p>
         <p class="text-justify">
-          If you will be shipping any gifts, please send them to Gary's Work at the following address:
-        </p>
-        <p>
-          Gary Marx<br/>
-          Suite 405<br/>
-          c/o Gusto, Inc.<br/>
-          500 3rd Street<br/>
-          San Francisco, CA 94107
+          If you will be shipping any gifts, please contact Gary & Amalia as they have recently moved
         </p>
         <p class="text-justify">
           We have registered with Bed Bath and Beyond, Macy's, and CB2. Click on the images to explore more.<br/>
